--- a/app/styles/_jingrong.scss
+++ b/app/styles/_jingrong.scss
@@ -9,6 +9,7 @@
                 a,
                 img {
                     outline: none;
+                    width: 100%;
                 }
             }
             .slick-arrow {
