--- a/app/styles/_iconfont.scss
+++ b/app/styles/_iconfont.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'iconfont';
-  src: url('//at.alicdn.com/t/font_1449292345_1839435.eot'); /* IE9*/
-  src: url('//at.alicdn.com/t/font_1449292345_1839435.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('//at.alicdn.com/t/font_1449292345_1839435.woff') format('woff'), /* chrome、firefox */
-  url('//at.alicdn.com/t/font_1449292345_1839435.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-  url('//at.alicdn.com/t/font_1449292345_1839435.svg#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('fonts/iconfont.eot'); /* IE9*/
+  src: url('fonts/iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('fonts/iconfont.woff') format('woff'), /* chrome、firefox */
+  url('fonts/iconfont.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url('fonts/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
                     
 
