--- a/app/styles/_jingrong.scss
+++ b/app/styles/_jingrong.scss
@@ -140,6 +140,7 @@
     }
     .cases {
     	margin-bottom: 50px;
+        overflow-x: hidden;
         .row {
             margin: 0 -10px;
         }
